# adif-mcp

./: CHANGELOG.md  README.md  pyproject.toml  server.json
src/adif_mcp/: __init__.py  adif_meta.json
src/adif_mcp/cli/: __init__.py
src/adif_mcp/dev/: build_hooks.py
src/adif_mcp/mcp/: server.py
src/adif_mcp/models/: qso.py
src/adif_mcp/providers/: provider_coverage.py
src/adif_mcp/resources/: __init__.py
src/adif_mcp/resources/schemas/: __init__.py  manifest.v1.json
src/adif_mcp/resources/spec/: adif_catalog.json  adif_meta.json
src/adif_mcp/resources/spec/317/: all.json  datatypes.json  enumerations.json  enumerations_ant_path.json  enumerations_arrl_section.json  enumerations_award.json  enumerations_award_sponsor.json  enumerations_band.json  enumerations_contest_id.json  enumerations_continent.json  enumerations_country.json  enumerations_credit.json  enumerations_dxcc_entity_code.json  enumerations_eqsl_ag.json  enumerations_mode.json  enumerations_morse_key_type.json  enumerations_primary_administrative_subdivision.json  enumerations_propagation_mode.json  enumerations_qsl_medium.json  enumerations_qsl_rcvd.json  enumerations_qsl_sent.json  enumerations_qsl_via.json  enumerations_qso_complete.json  enumerations_qso_download_status.json  enumerations_qso_upload_status.json  enumerations_region.json  enumerations_secondary_administrative_subdivision.json  enumerations_secondary_administrative_subdivision_alt.json  enumerations_submode.json  fields.json
test/: TEST-CASE-REGISTER.md  test_enumerations.py  test_pkg_meta.py  test_resources.py
