[project]
name = "adif-mcp"
version = "1.0.4"
description = "ADIF MCP server — spec parsing, validation, and field enumeration tools"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{name = "KI7MT", email = "ki7mt@yahoo.com"}]
keywords = [
    "amateur-radio", "ham-radio", "adif", "mcp", "model-context-protocol",
    "lotw", "eqsl", "qrz", "qso-logging", "ai-agents",
]
# Support modern CPython, develop on 3.13, run on 3.11+
requires-python = ">=3.10"

# Runtime deps only (keep UI optional; Tkinter is stdlib)
dependencies = [
    "aiofiles>=25.1.0",
    "click>=8.1.7",
    "fastmcp>=3.0",
    "requests>=2.32.5",
    "typing-extensions>=4.15.0",
    "tomli>=2.0; python_version < '3.11'",
]

# Classifiers help downstream tooling/users
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Communications :: Ham Radio",
    "Topic :: Utilities",
]

[dependency-groups]
dev = [
    "pytest",
    "mypy",
    "ruff",
    "commitizen",
    "pydantic>=2.12.0",
    "jsonschema>=4.25.1",
    "interrogate>=1.7.0",
    "types-click>=7.1.8",
    "types-requests",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.18",
    "mkdocstrings[python]>=0.30.0",
    "pymdown-extensions>=10.10",
    "pymdown-extensions[extra]>=10.10",
    "mkdocs-redirects>=1.2.2",
    "mkdocs-mermaid2-plugin>=1.2.2",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "cli-test-helpers>=4.1.0",
    "types-aiofiles>=25.1.0.20251011",
    "pytest-asyncio>=1.3.0",
]

# Optional extras (reserved for future use)
[project.optional-dependencies]
dev = [
  "ruff>=0.6.8",
  "mypy>=1.11",
  "interrogate>=1.7.0",
]

test = [
  "pytest>=8.3",
  "cli-test-helpers>=0.3.0",
]

# Convenience bundle
all = [
  "adif-mcp[dev,test]",
]

[project.urls]
Homepage = "https://qso-graph.io"
Documentation = "https://qso-graph.io"
Repository = "https://github.com/qso-graph/adif-mcp"
Issues = "https://github.com/qso-graph/adif-mcp/issues"
"ADIF Specification" = "https://adif.org.uk/316/ADIF_316.htm"

[project.scripts]
adif-mcp = "adif_mcp.cli.__main__:main"

# --------------------------------------------------------------------
# ADIF tool config (OS-agnostic & SSOT-ish; helpers interpret it)
# --------------------------------------------------------------------
[tool.adif]
spec_version = "3.1.6"
features = ["core QSO model", "band/mode/QSL_RCVD enums"]

[tool.adif_mcp]
config_dir_name = "config"
manifest = "manifest.json"
meta_output = "adif_meta.json"
personas_index = "personas.json"
providers_dir = "providers"
schemas = "adif_catalog.json"
spec = "ADIF_316"

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as async"
]
asyncio_default_fixture_loop_scope = "function"
#addopts = "-q"

# Paths below are *logical* (not absolute). Your util code should:
# - Resolve {config_dir} to a platform-appropriate location (e.g., appdirs)
# - Treat relative repo paths as development defaults
manifest = "mcp/manifest.json"
schemas = { manifest = "mcp/schemas/manifest.v1.json" }
spec = { adif_catalog = "mcp/spec/adif_catalog.json" }
providers_dir = "mcp/providers"
meta_output = "src/adif_mcp/adif_meta.json"

# New: centralize config locations in one place (interpreted by util code)
config_dir_name = "adif-mcp"           # e.g., ~/.config/adif-mcp on Unix, %APPDATA%/adif-mcp on Windows
personas_index = "{config_dir}/personas.json"  # util resolves {config_dir}

# ----------------
# Dev / QA tooling
# ----------------
[tool.ruff]
target-version = "py311"
src = ["src", "test"]
line-length = 95
extend-exclude = [
    ".venv",
    ".smoke-venv",
    "dist",
    "build",
    ".eggs",
    ".pytest_cache",
    "site",
    "docs/_site",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
fixable = ["I"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["adif-mcp"]
disable_error_code = ["annotation-unchecked", "call-arg"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "adif_mcp.cli"
disable_error_code = ["misc"]
ignore_missing_imports = true

# If tests get too noisy, we can loosen just that package
[[tool.mypy.overrides]]
module = "test.*"
disable_error_code = ["annotation-unchecked"]

[tool.interrogate]
fail-under = 100
verbose = 1
quiet = false
color = true
ignore-init-method = true
ignore-module = false
ignore-magic = true
ignore-private = true
ignore-nested-functions = true
ignore-properties = true
paths = ["src", "test"]
exclude = [".venv", ".smoke-venv", "dist", "build", "site", "docs/_site"]
whitelist-regex = [
    "^test_*"
]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = true

# -------------
# Build system
# -------------
[build-system]
requires = ["hatchling>=1.21", "tomli>=2.0; python_version < '3.11'"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path = "src/adif_mcp/dev/build_hooks.py"


[tool.hatch.build.targets.wheel]
packages = ["src/adif_mcp"]
include = [
  "src/adif_mcp/mcp/manifest.json",
  "src/adif_mcp/resources/**",
]

[tool.hatch.build.targets.sdist]
include = [
  "src/adif_mcp/**",
  "src/adif_mcp/mcp/manifest.json",
  "src/adif_mcp/resources/**",
  "README.md",
  "LICENSE",
  "pyproject.toml",
  "test/**",
]
exclude = [
    "scripts/**",
    ".venv/**",
    ".smoke-venv/**",
    "dist/**",
    "build/**",
    ".git/**",
    ".github/**",
    "docs/**",
    "site/**",
    ".ruff_cache/**",
    ".mypy_cache/**",
    ".pytest_cache/**",
]
